tests/diagnostics/packages/imports/non_exported_external/expect.txt
# exit: 1
main.coppice:1:29: error: imported symbol 'helper' in package 'workspace/lib/auth' is not exported
  import workspace/lib/auth { helper }
                              ^
